@@ -39,6 +39,7 @@ class  tx_recordsmanager_module2 extends t3lib_SCbase
 	public $pageinfo;
 	protected $items = array();
 	protected $currentItem = array();
+	protected $disableFields = '';
 
 	/**
 	 * Initializes the Module
@@ -206,14 +207,14 @@ class  tx_recordsmanager_module2 extends t3lib_SCbase
 					$returnUrl = rawurlencode('mod.php?M=txrecordsmanagerM1_insert');
 					$editLink = 'alt_doc.php?returnUrl=' . $returnUrl . '&edit[' . $row['sqltable'] . '][' . $create . ']=new';
 					// disabledFields
-					$disabledFields = tx_recordsmanager_flexfill::getDiffFieldsFromTable($row['sqltable'], $this->currentItem['sqlfieldsinsert']);
-					foreach ($disabledFields as $disabledField) {
+					$this->disableFields = implode(',', tx_recordsmanager_flexfill::getDiffFieldsFromTable($row['sqltable'], $this->currentItem['sqlfieldsinsert']));
+					/*foreach ($disabledFields as $disabledField) {
 						$this->disabledFields .= '&overrideVals[' . $row['sqltable'] . '][' . $disabledField . '][disabled]=1';
-					}
+					}*/
 					if ($this->currentItem['sqlfieldsinsert'] !== '') {
 						// old method with "columnsOnly" do not show the tabs, now process with "overrideVals"
 						//$editLink .= '&columnsOnly=' . $this->currentItem['sqlfieldsinsert'];
-						$editLink .= $this->disabledFields;
+						$editLink .= '&recordsHide=' . $this->disableFields;
 					}
 					$link = t3lib_div::getIndpEnv('TYPO3_REQUEST_DIR') . $GLOBALS['BACK_PATH'] . $editLink;
 					t3lib_utility_Http::redirect($link);
